# MassSpectraWorker

./: .gitignore  Makefile  go.mod  go.sum  pyproject.toml
cmd/api/: main.go
internal/client/: python_client.go
internal/handlers/: plot.go  web.go
mass_spectra_worker.egg-info/: PKG-INFO  SOURCES.txt
src/core/: assign_module.py  mzml_reader.py  plot_service.py
src/protobuf/: plot.pb.go  plot.proto  plot_grpc.pb.go  plot_pb2.py  plot_pb2.pyi  plot_pb2_grpc.py
src/server/: main.py  servicer.py  worker.py
static/css/: style.css
static/js/: mass_list.js
templates/: mass_list.html
