[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mass-spectra-worker"
version = "0.1.0"
description = "Mass spectra processing worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ваши зависимости
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "cmd*", "internal*", "pkg*"]